# quadratic-equation-solver

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_commands.json  main  main.cpp
benchmark/: CMakeLists.txt
include/: aexpression.hpp  coefficient.h  coefficient_set.h  coefficients.hpp  constants.hpp  context.hpp  equation_coefficients.hpp  error.h  error.hpp  expression.hpp  input.hpp  nt_expressions.hpp  number.h  number.hpp  number_kit.h  number_kit.hpp  output.h  output.hpp  selector.hpp  solution.h  solution.hpp  solver.hpp  t_expression.hpp  token.hpp  token_sequence.hpp
include/interpreter/: and.hpp  constant.hpp  context.hpp  digit.hpp  digits.hpp  dot.hpp  exp.hpp  exponent.hpp  expression.hpp  float.hpp  fraction.hpp  inf.hpp  logical.hpp  minus.hpp  nan.hpp  or.hpp  plus.hpp  sign.hpp  signed_inf.hpp  signed_integer.hpp  signed_nan.hpp  token.hpp  token_sequence.hpp  zero.hpp
quadratic-equation-solver/: CMakeLists.txt
quadratic-equation-solver/include/: coefficients.hpp  complex_number.hpp  constants.hpp  error.hpp  input.hpp  number.hpp  numbers.hpp  solution.hpp
quadratic-equation-solver/include/interpreter/: constant.hpp  digits.hpp  exponent.hpp  float.hpp  interpreter.hpp  signed_integer.hpp
quadratic-equation-solver/src/: complex_number.cpp  numbers.cpp  solution.cpp
quadratic-equation-solver/src/coefficients/: constants.cpp
quadratic-equation-solver/src/input/: impl.cpp
quadratic-equation-solver/src/interpreter/: constant.cpp  context.cpp  digits.cpp  float.cpp  interpreter.cpp  logical.cpp  sign.cpp
quadratic-equation-solver/src/number/: impl.cpp
quadratic-equation-solver/src/output/: impl.cpp
quadratic-equation-solver/src/solver/: constants.cpp  impl.cpp
src/: coefficient.cpp  coefficient_set.cpp  context.cpp  error.cpp  main.cpp  number.cpp  number_kit.cpp  output.cpp  solution.cpp  t_expression.cpp  t_expressions.cpp  token.cpp  token_sequence.cpp
src/coefficients/: impl.cpp
src/equation_coefficients/: constants.cpp  impl.cpp
src/input/: constants.cpp  impl.cpp  input.cpp
src/interpreter/: and.cpp  constant.cpp  context.cpp  digit.cpp  digits.cpp  dot.cpp  exp.cpp  exponent.cpp  float.cpp  fraction.cpp  inf.cpp  interpreter.cpp  minus.cpp  nan.cpp  or.cpp  plus.cpp  sign.cpp  signed_integer.cpp  token.cpp  token_sequence.cpp  zero.cpp
src/number/: constants.cpp  impl.cpp  number.cpp  number_constants.cpp
src/number_kit/: number_kit.cpp  number_kit_constants.cpp
src/output/: constants.cpp  impl.cpp  output.cpp
src/solution/: constants.cpp  impl.cpp  solution.cpp  solution_constants.cpp
src/solver/: impl.cpp
tests/: CMakeLists.txt  test.cpp  test_coefficients.cpp  test_error.cpp  test_number.cpp  test_number_kit.cpp  test_output.cpp  test_solution.cpp  test_solver.cpp  tools.cpp
tests/tests/: base.cpp  solve_equation.cpp
